# voxel2d

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.4F690D383A41B5BD.idx
src/: main.cpp
